modules/protocol/http/test/binary_uri-ref.txt
debug http: selecting http dissector on flow
debug tcp-connection: opening connection 127.0.0.1:42072 -> 127.0.0.1:80
info alert: id = <>
	severity = low
	description = Parse error at byte 5 : pattern /^(?:[[:blank:]]+)/ doesn't match against `\x4\x8e\x99\xff`
debug tcp-connection: dropping connection 127.0.0.1:42072 -> 127.0.0.1:80
debug tcp-connection: closing connection 127.0.0.1:42072 -> 127.0.0.1:80
